--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
-numpy<1.24
+librosa==0.8.1
+soundfile
+numpy==1.23.5
 pandas
 scikit-learn
 joblib
-xgboost
 lightgbm
-librosa==0.9.2
-soundfile
+xgboost
